--- a/2.끝말잇기/WordRelay.html
+++ b/2.끝말잇기/WordRelay.html
@@ -9,17 +9,21 @@
 </head>
 <body>
 <div id="root">
-    <div>{{word}}</div>
-    <form v-on:submit="onSubmitForm">
-        <input type="text" ref="answer" v-model="value">
-        <button type="submit">입력!</button>
-    </form>
-    <div id="result">{{result}}</div>
+    <word-relay />
+    <word-relay />
+    <word-relay />
 </div>
 <script>
-  const app = new Vue({
-    el: '#root',
-    data: {
+    Vue.component('wordRelay', { // 전역 컴포넌트
+      template: `
+        <div>{{word}}</div>
+        <form v-on:submit="onSubmitForm">
+            <input type="text" ref="answer" v-model="value">
+            <button type="submit">입력!</button>
+        </form>
+        <div>{{result}}</div>
+      `,
+      data: {
         word: '제로초',
         result: '',
         value: '',
@@ -39,6 +43,11 @@
           }
         },
       }
+    })
+</script>
+<script>
+  const app = new Vue({
+    el: '#root',
   });
 </script>
 </body>
