--- a/2.끝말잇기/WordRelay.html
+++ b/2.끝말잇기/WordRelay.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 <div id="root">
-    <word-relay></word-relay>
-    <word-relay></word-relay>
-    <word-relay></word-relay>
+    <word-relay start-word="제로초"></word-relay>
+    <word-relay start-word="초밥"></word-relay>
+    <word-relay start-word="바보"></word-relay>
 </div>
 <script>
     Vue.component('wordRelay', { // 전역 컴포넌트
@@ -25,9 +25,10 @@
             <div>{{result}}</div>
         </div>
       `,
+      props: ['startWord'],
       data() {
         return {
-          word: '제로초',
+          word: this.startWord,
           result: '',
           value: '',
         };
